--- a/archcraft-2bwm/shared/theme/polybar/config.ini
+++ b/archcraft-2bwm/shared/theme/polybar/config.ini
@@ -1,4 +1,4 @@
-## Copyright (C) 2020-2023 Aditya Shakya <adi1090x@gmail.com>
+## Copyright (C) 2020-2024 Aditya Shakya <adi1090x@gmail.com>
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
@@ -42,14 +42,14 @@ module-margin-left = 0
 module-margin-right = 0
 
 font-0 = "JetBrains Mono:style=medium:size=10;3"
-font-1 = "Iosevka Nerd Font:size=12;3"
-font-2 = "Iosevka Nerd Font:size=15;4"
+font-1 = "Symbols Nerd Font:size=12;3"
+font-2 = "Symbols Nerd Font:size=15;4"
 font-3 = "Iosevka:style=bold:size=12;4"
 font-4 = "archcraft:size=14;4"
 
 modules-left = date battery sep mpd song
 modules-center = 2bwm
-modules-right = volume brightness sep bluetooth sep network
+modules-right = volume brightness sep bluetooth sep network sep tray
 
 separator =
 spacing = 0
@@ -58,16 +58,6 @@ dim-value = 1.0
 
 wm-name = 2bwm
 locale = 
-
-tray-position = right
-tray-detached = false
-tray-maxsize = 16
-tray-transparent = false
-tray-background = ${color.BACKGROUND}
-tray-offset-x = 0
-tray-offset-y = 0
-tray-padding = 0
-tray-scale = 1.0
 
 wm-restack = 2bwm
 
