--- a/archcraft-2bwm/shared/theme/polybar/modules.ini
+++ b/archcraft-2bwm/shared/theme/polybar/modules.ini
@@ -1,4 +1,4 @@
-## Copyright (C) 2020-2023 Aditya Shakya <adi1090x@gmail.com>
+## Copyright (C) 2020-2024 Aditya Shakya <adi1090x@gmail.com>
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
@@ -901,6 +901,19 @@ content-foreground = ${color.RED}
 content-padding = 0
 
 click-left = /usr/share/archcraft/2bwm/scripts/rofi_powermenu
+
+;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
+
+[module/tray]
+type = internal/tray
+
+format = <tray>
+format-padding = 2
+format-background = ${color.BLUE}
+tray-background = ${color.BLUE}
+tray-foreground = ${color.FOREGROUND}
+tray-spacing = 10px
+tray-size = 50%
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
